@@ -1,3 +1,9 @@
+2019-06-02 Riccardo Mottola <rm@gnu.org>
+
+	* DBRest.h
+	* DBRest.m
+	First steps in REST API query support.
+
 2019-05-28 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.m
